--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,15 @@
             "problemMatcher": [
                 "$tsc"
             ],
+            "group": "build"
+        },
+        {
+            "type": "typescript",
+            "tsconfig": "js/tsconfig.json",
+            "option": "watch",
+            "problemMatcher": [
+                "$tsc-watch"
+            ],
             "group": {
                 "kind": "build",
                 "isDefault": true
