--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -3,6 +3,11 @@
         "target": "es6",
         "module": "es6",
         "sourceMap": false
+        
     
-    }
+    },
+    "include": [
+        "*",
+        "../gt/js/*"
+    ]
 }
