--- a/user_config.json
+++ b/user_config.json
@@ -227,21 +227,25 @@
 			"visible": true
 		}
 	],
-	"roadLayer":{
-		"caption":"Camino Recorrido",
-		"color":"#ff9900",
-		"width":"2",
-		"opacity":0.8,
-		"dash":2,
-		"visible":true
+	"roadLayer": {
+		"caption": "Camino Recorrido",
+		"color": "#ff9900",
+		"width": "2",
+		"opacity": 0.8,
+		"dash": 2,
+		"visible": true
 	},
-	"traceLayer":{
-		"caption":"Rastro",
-		"color":"#f743d8",
-		"width":"4",
-		"opacity":1.0,
-		"dash":0,
-		"length":1000,
-		"visible":true
+	"traceLayer": {
+		"caption": "Rastro",
+		"color": "#f743d8",
+		"width": "4",
+		"opacity": 1.0,
+		"dash": 0,
+		"length": 1000,
+		"visible": true
+	},
+	"config": {
+		"mode": 1,
+		"speedFactor": 0.01
 	}
 }
