--- a/modules/cota2/config.json
+++ b/modules/cota2/config.json
@@ -1,38 +1,38 @@
 [
     {
         "type": "css",
-        "file": "json/css.json"
+        "file": "{@CONFIG_PATH}css.json"
     },
     {
         "type": "js",
-        "file": "json/js.json"
+        "file": "{@CONFIG_PATH}js.json"
     },
     {
         "type": "themes",
-        "file": "json/themes.json"
+        "file": "{@CONFIG_PATH}themes.json"
     },
     {
         "type": "bd",
-        "file": "json/bd.json"
+        "file": "{@CONFIG_PATH}bd.json"
     },
     {
         "type": "inputs",
-        "file": "json/inputs.json"
+        "file": "{@CONFIG_PATH}inputs.json"
     },
     {
         "type": "actions",
-        "file": "json/actions.json"
+        "file": "{@CONFIG_PATH}actions.json"
     },
     {
         "type": "elements",
-        "file": "json/elements.json"
+        "file": "{@CONFIG_PATH}elements.json"
     },
     {
         "type": "commands",
-        "file": "json/commands.json"
+        "file": "{@CONFIG_PATH}commands.json"
     },
     {
         "type": "init",
-        "file": "json/init.json"
+        "file": "{@CONFIG_PATH}init.json"
     }
 ]
